# HPC

exercise_10/: Makefile
exercise_10/docu/: docu_10.tex
exercise_10/src/: cuda_device_prop.cu  main.cu  prop
exercise_2/: Makefile  README.txt  docu_2.tex
exercise_3/: Makefile
exercise_3/docu/: docu_3.aux  docu_3.tex  docu_3.toc
exercise_4/: Makefile
exercise_4/docu/: docu_4.tex
exercise_4/src/: distribution.c  distribution.h  main.c  matrix_multiply.c  matrix_multiply.h  parallel_matmult.c  parallel_matmult.h  tests.c  tests.h
exercise_5/: Makefile  README.txt
exercise_5/docu/: docu_5.tex
exercise_5/src/: main.c  matrix.c  matrix.h
exercise_6/: Makefile
exercise_6/docu/: .docu_6.tex.swp  docu_6.tex
exercise_6/src/: main.c  matrix.c  matrix.h
exercise_7/: Makefile
exercise_7/docu/: docu_7.tex
exercise_7/inc/: nbody.cpp  nbody.hpp
exercise_7/src/: main.cpp
exercise_8/: Makefile
exercise_8/docu/: docu_8.tex  lstsettings.tex
exercise_8/src/: communication.cpp  communication.hpp  coordinate.cpp  coordinate.h  main.cpp  nbody.cpp  nbody.hpp
halo/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
halo/inc/: 2D_proc_grid.h  Buffers.h  Halo_2D.h  ProcGrid.h  TransmitBuffer.h  halo.h
halo/test/: test_buffer_2D.cpp  test_buffer_3D.cpp  test_halo_2D.cpp
halo_old/: Makefile  run_benchmark.sh  run_test.sh  test_buffer_1D  test_buffer_2D
halo_old/benchmark/: benchmark.cpp  benchmark.pl  benchmark_1D.cpp  benchmark_2D.cpp  benchmark_3D.cpp
halo_old/example/: stencil.cpp
halo_old/inc/: Buffers.h  Halo.h  Proc_Grid.h  (+5 more)
(+46 files in other folders)
